--- a/pom.xml
+++ b/pom.xml
@@ -135,11 +135,16 @@
             <!--<artifactId>spring-webflux</artifactId>-->
             <!--<version>5.0.7.RELEASE</version>-->
         <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-context</artifactId>-->
-            <!--<version>5.0.4.RELEASE</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.0.4.RELEASE</version>
+        </dependency>
         <!--&lt;!&ndash; https://mvnrepository.com/artifact/io.vertx/vertx-web &ndash;&gt;-->
         <!--<dependency>-->
             <!--<groupId>io.netty</groupId>-->
