--- a/taxonomy/pom.xml
+++ b/taxonomy/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython</artifactId>
+            <version>2.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
