Changes: - Split Taxonomy entity classes and repos to category and product. - Added additional classes and changes to controller to handle format from front end client. - Discovered persist of sentiment and taxonomy results per comment which is un-needed. - About to commence major surgery on ways to persist per DatabaseSchemaDesign.xlsx.
Issues Noted:
- Dependency injection via AppConfigTaxonomyModelWrapper doesn't work at the moment.
- Reactive related modules is broken.
- testclient.html not working.  Needs to use set header to application/json and can't be bothered.  Suggest to use Postman.

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <module>springwebspringboottomcat</module>
         <module>nlpcore</module>
         <module>common</module>
-        <module>taxonomy</module>
+        <module>taxonomyCategory</module>
     </modules>
 
     <name>nlp</name>
