Before moving the retrieval of model / category / product from taxonomyModelWrapper.getTzxonomyFromModels() comment.addTaxonomies()

--- a/common/src/main/resources/database.properties
+++ b/common/src/main/resources/database.properties
@@ -33,6 +33,9 @@ hibernate.show_sql = false
 # http://docs.jboss.org/hibernate/orm/4.3/manual/en-US/html_single/#configuration-optional
 hibernate.format_sql = true
 # https://antoniogoncalves.org/2014/12/11/generating-database-schemas-with-jpa-2-1/
-javax.persistence.schema-generation.database.action = create
-javax.persistence.schema-generation.scripts.action = create
+# https://www.thoughts-on-java.org/standardized-schema-generation-data-loading-jpa-2-1/
+javax.persistence.schema-generation.database.action = drop-and-create
+javax.persistence.schema-generation.scripts.action = drop-and-create
+javax.persistence.schema-generation.create-database-schemas = true
+javax.persistence.schema-generation.scripts.drop-target = drop.dll
 javax.persistence.schema-generation.scripts.create-target = create.ddl
