Changes: - Updated POM to generate uber jar using spring-boot-maven-plugin.
Issues Noted:
- Dependency injection via AppConfigTaxonomyModelWrapper doesn't work at the moment.
- Reactive related modules is broken.
- testclient.html not working.  Needs to use set header to application/json and can't be bothered.  Suggest to use Postman.

--- a/SpringWebFluxSpringBootNetty/pom.xml
+++ b/SpringWebFluxSpringBootNetty/pom.xml
@@ -22,6 +22,7 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <app.main.class>com.kenrui.nlp.springwebfluxspringbootnetty.SpringWebFluxSpringBootNetty</app.main.class>
     </properties>
 
     <dependencies>
@@ -69,9 +70,73 @@
 
     <build>
         <plugins>
+            <!--<plugin>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-shade-plugin</artifactId>-->
+            <!--<version>3.2.1</version>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<phase>package</phase>-->
+            <!--<goals>-->
+            <!--<goal>shade</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<transformers>-->
+            <!--<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+            <!--<manifestEntries>-->
+            <!--<Main-Class>${app.main.class}</Main-Class>-->
+            <!--<X-Compile-Source-JDK>${maven.compiler.source}</X-Compile-Source-JDK>-->
+            <!--<X-Compile-Target-JDK>${maven.compiler.target}</X-Compile-Target-JDK>-->
+            <!--</manifestEntries>-->
+            <!--</transformer>-->
+            <!--</transformers>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
+            <!--https://www.baeldung.com/executable-jar-with-maven-->
+            <!--https://blog.csdn.net/oarsman/article/details/79935589-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>spring-boot</classifier>
+                            <mainClass>${app.main.class}</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <!-- here the phase you need -->
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/configs</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/../configs</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
